[gd_scene load_steps=40 format=3 uid="uid://dijlshyjh0vla"]

[ext_resource type="PackedScene" uid="uid://csjrgcxhntrg" path="res://source/actors/building pieces/basic/stone_floor.tscn" id="1_6kysq"]
[ext_resource type="Script" path="res://source/actors/rooms/safe_room.gd" id="1_d3v5u"]
[ext_resource type="PackedScene" uid="uid://coyfxhlkcko0r" path="res://source/actors/rooms/room_template.tscn" id="1_ntfkh"]
[ext_resource type="PackedScene" uid="uid://cbcgqpe627vc8" path="res://source/actors/building pieces/archways/archway.tscn" id="2_pki5p"]
[ext_resource type="PackedScene" uid="uid://db0l5d6phwago" path="res://source/actors/building pieces/basic/stone_wall.tscn" id="3_tctxl"]
[ext_resource type="PackedScene" uid="uid://cffojy8sonot2" path="res://source/actors/building pieces/basic/wood_floor.tscn" id="7_s44qe"]
[ext_resource type="PackedScene" uid="uid://cjbokef3jjder" path="res://source/actors/decor/furniture/chair.tscn" id="9_r1pjc"]
[ext_resource type="PackedScene" uid="uid://fts1qwh5jkyj" path="res://source/actors/decor/misc/plate_w_candle.tscn" id="12_i4x8k"]
[ext_resource type="PackedScene" uid="uid://cvuemxunf1nna" path="res://source/actors/misc/note.tscn" id="14_bjogf"]
[ext_resource type="PackedScene" uid="uid://2vla0smwg114" path="res://source/assets/ui/notes/alchemists_note.tscn" id="15_3js4e"]
[ext_resource type="PackedScene" uid="uid://i3byua7eq2yc" path="res://source/actors/decor/furniture/stool.tscn" id="15_awa08"]
[ext_resource type="PackedScene" uid="uid://cid4xuq72t4q7" path="res://source/actors/decor/groups/books_3.tscn" id="16_0k3ei"]
[ext_resource type="PackedScene" uid="uid://df2cwwndarx36" path="res://source/actors/decor/furniture/shelf_2.tscn" id="16_83156"]
[ext_resource type="PackedScene" uid="uid://bx4c82xi8bksb" path="res://source/actors/decor/groups/books_1.tscn" id="17_h0h5u"]
[ext_resource type="PackedScene" uid="uid://bldplijh1bq7g" path="res://source/actors/decor/groups/books_2.tscn" id="18_jwqkr"]
[ext_resource type="PackedScene" uid="uid://crsbreiuabhvi" path="res://source/actors/decor/groups/books_6.tscn" id="19_0wdpu"]
[ext_resource type="PackedScene" uid="uid://co8wmy3bgkhpy" path="res://source/actors/decor/groups/books_4.tscn" id="20_c6t8m"]
[ext_resource type="PackedScene" uid="uid://c5owsbr3aaf6x" path="res://source/actors/decor/misc/scroll_2.tscn" id="21_mju78"]
[ext_resource type="Material" uid="uid://dxeoptj8rsx36" path="res://source/assets/materials/bricks/bricks.tres" id="22_1fwwt"]
[ext_resource type="PackedScene" uid="uid://db57xmqhrdyrg" path="res://source/actors/decor/furniture/corner_table.tscn" id="22_5kyhp"]
[ext_resource type="PackedScene" uid="uid://ciqhcdlogy3np" path="res://source/actors/decor/misc/hanging_lamp.tscn" id="22_dvdth"]
[ext_resource type="PackedScene" uid="uid://cykavwbds5y1f" path="res://source/actors/interactables/ruboleum_vial.tscn" id="24_g1atn"]
[ext_resource type="Script" path="res://source/assets/resources/item_data.gd" id="26_rhjbl"]
[ext_resource type="Texture2D" uid="uid://dlswrwa6p5k41" path="res://source/assets/ui/inventory/ruboleum_vial.png" id="27_lo8s1"]
[ext_resource type="PackedScene" uid="uid://cwxs7uffbs0wu" path="res://source/assets/ui/notes/distillation_instructions.tscn" id="28_a1a56"]
[ext_resource type="PackedScene" uid="uid://ii0e665jma4b" path="res://source/actors/building pieces/archways/small_archway.tscn" id="28_gg6p8"]
[ext_resource type="AudioStream" uid="uid://b041olqq6sucl" path="res://source/assets/sounds/music/safe.ogg" id="29_02vm0"]
[ext_resource type="ArrayOccluder3D" uid="uid://cpyxk2qr6pjkr" path="res://source/actors/rooms/occluders/safe_room.occ" id="32_bdtjo"]
[ext_resource type="PackedScene" uid="uid://cx0vwjgdcwwar" path="res://source/actors/decor/misc/torch_holder.tscn" id="32_cfv3l"]
[ext_resource type="PackedScene" uid="uid://2n0p2swjfvtx" path="res://source/actors/decor/furniture/chest.tscn" id="32_v6vsh"]
[ext_resource type="PackedScene" uid="uid://vvlxaydbk275" path="res://source/actors/interactables/distillation_station.tscn" id="33_7s2y7"]
[ext_resource type="PackedScene" uid="uid://ijd8uaep4lbk" path="res://source/actors/decor/groups/books_5.tscn" id="33_q6ph1"]
[ext_resource type="Script" path="res://source/actors/rooms/tutorial_popup_area.gd" id="33_x680n"]
[ext_resource type="AudioStream" uid="uid://s8yhuv4exfix" path="res://source/assets/sounds/misc/bottle_pickup.ogg" id="34_e2n1h"]
[ext_resource type="PackedScene" uid="uid://xo1jmmirryt" path="res://source/actors/decor/misc/ink_pot_w_pen.tscn" id="34_jabgf"]

[sub_resource type="Resource" id="Resource_yb1eg"]
resource_local_to_scene = true
script = ExtResource("26_rhjbl")
name = "Ruboleum Vial"
texture = ExtResource("27_lo8s1")
pickup_sound = ExtResource("34_e2n1h")
hold_rotation_offset = Vector3(0, 0, 0)
hold_scale_multiplier = 1.0

[sub_resource type="Resource" id="Resource_2sw8t"]
resource_local_to_scene = true
script = ExtResource("26_rhjbl")
name = "Ruboleum Vial"
texture = ExtResource("27_lo8s1")
pickup_sound = ExtResource("34_e2n1h")
hold_rotation_offset = Vector3(0, 0, 0)
hold_scale_multiplier = 1.0

[sub_resource type="BoxShape3D" id="BoxShape3D_8cenn"]
size = Vector3(19.5, 10, 13)

[sub_resource type="BoxShape3D" id="BoxShape3D_8cncr"]
size = Vector3(1, 4, 3)

[node name="safe_room" instance=ExtResource("1_ntfkh")]
script = ExtResource("1_d3v5u")

[node name="stone_wall13" parent="walls" index="0" instance=ExtResource("3_tctxl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 6, 2)
size = Vector3(3, 1, 5)

[node name="stone_wall14" parent="walls" index="1" instance=ExtResource("3_tctxl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.25, 3.5, 5)
size = Vector3(12.5, 6, 1)

[node name="stone_wall15" parent="walls" index="2" instance=ExtResource("3_tctxl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.5, 3.5, 4)
size = Vector3(4, 6, 1)

[node name="stone_wall16" parent="walls" index="3" instance=ExtResource("3_tctxl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.75, 3.5, -5)
size = Vector3(7.5, 6, 1)

[node name="stone_wall17" parent="walls" index="4" instance=ExtResource("3_tctxl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 3.5, -2.5)
size = Vector3(1, 6, 4)

[node name="stone_wall18" parent="walls" index="5" instance=ExtResource("3_tctxl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11, 3.5, 0)
size = Vector3(1, 6, 1)

[node name="stone_wall19" parent="walls" index="6" instance=ExtResource("3_tctxl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 3.5, -5)
size = Vector3(3, 6, 1)

[node name="stone_wall20" parent="walls" index="7" instance=ExtResource("3_tctxl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11, 3.5, -2.5)
size = Vector3(1, 6, 4)

[node name="stone_wall21" parent="walls" index="8" instance=ExtResource("3_tctxl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.75, 6, -0.25)
size = Vector3(5.5, 1, 0.5)

[node name="stone_wall22" parent="walls" index="9" instance=ExtResource("3_tctxl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.5, 5.75, 1.5)
size = Vector3(4, 1.5, 4)

[node name="stone_wall23" parent="walls" index="10" instance=ExtResource("3_tctxl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.25, 3, 5)
size = Vector3(5.5, 5, 1)

[node name="stone_wall24" parent="walls" index="11" instance=ExtResource("3_tctxl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.5, 3, 0)
size = Vector3(1, 5, 9)

[node name="stone_wall25" parent="walls" index="12" instance=ExtResource("3_tctxl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.75, 3, -5)
size = Vector3(6.5, 5, 1)
global_triplanar = false

[node name="wood_floor" parent="floors" index="0" instance=ExtResource("7_s44qe")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.75, 0, 0)
size = Vector3(18.5, 1, 11)

[node name="stone_floor5" parent="floors" index="1" instance=ExtResource("1_6kysq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.25, 7, -2.5)
size = Vector3(8.5, 1, 6)

[node name="stone_floor6" parent="floors" index="2" instance=ExtResource("1_6kysq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.5, 7, -2.5)
size = Vector3(2, 1, 6)

[node name="stone_floor7" parent="floors" index="3" instance=ExtResource("1_6kysq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.75, 6, 2.25)
size = Vector3(5.5, 1, 4.5)

[node name="stone_floor8" parent="floors" index="4" instance=ExtResource("1_6kysq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.25, 6, 3)
size = Vector3(5.5, 1, 5)

[node name="stone_floor9" parent="floors" index="5" instance=ExtResource("1_6kysq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.75, 6, -2.5)
size = Vector3(6.5, 1, 6)

[node name="books_3" parent="decor" index="0" instance=ExtResource("16_0k3ei")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.6702, 2.4, -3.01845)

[node name="books_1" parent="decor" index="1" instance=ExtResource("17_h0h5u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.7529, 4, -3.06126)

[node name="books_2" parent="decor" index="2" instance=ExtResource("18_jwqkr")]
transform = Transform3D(-0.400973, 0, 0.91609, 0, 1, 0, -0.91609, 0, -0.400973, 4.0097, 2, -3.52446)

[node name="books_6" parent="decor" index="3" instance=ExtResource("19_0wdpu")]
transform = Transform3D(1.31134e-07, 0, 1, 0, 1, 0, -1, 0, 1.31134e-07, 6.9349, 2.4, 3.8913)

[node name="books_4" parent="decor" index="4" instance=ExtResource("20_c6t8m")]
transform = Transform3D(1.31134e-07, 0, 1, 0, 1, 0, -1, 0, 1.31134e-07, 6.5, 4, 3.75)

[node name="scroll_2" parent="decor" index="5" instance=ExtResource("21_mju78")]
transform = Transform3D(0.258819, 0, -0.965926, 0, 1, 0, 0.965926, 0, 0.258819, 6.75, 0.75, 3.75)

[node name="scroll_3" parent="decor" index="6" instance=ExtResource("21_mju78")]
transform = Transform3D(0.258819, 0, 0.965926, 0, 1, 0, -0.965926, 0, 0.258819, 6.25, 0.75, 3.75)

[node name="chair" parent="decor" index="7" instance=ExtResource("9_r1pjc")]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 4.25, 0.5, -1.75)

[node name="plate_w_candle" parent="decor" index="8" instance=ExtResource("12_i4x8k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.25, 2, -3.25)
default_energy = 0.25
lit = false
shadow_mode = 1

[node name="shelf_2" parent="decor" index="9" instance=ExtResource("16_83156")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.6923, 0.5, -3.01924)

[node name="shelf_3" parent="decor" index="10" instance=ExtResource("16_83156")]
transform = Transform3D(2.98023e-08, 0, 1, 0, 1, 0, -1, 0, 2.98023e-08, 7, 0.5, 3.75)

[node name="stool" parent="decor" index="11" instance=ExtResource("15_awa08")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0.5, -1)

[node name="stool2" parent="decor" index="12" instance=ExtResource("15_awa08")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0.5, 4)

[node name="plate_w_candle2" parent="decor/stool2" index="2" instance=ExtResource("12_i4x8k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
default_energy = 0.25
lit = false
shadow_mode = 1

[node name="hanging_lamp2" parent="decor" index="13" instance=ExtResource("22_dvdth")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.75, -0.5, -2.5)
default_energy = 0.25
lit = false
shadow_mode = 1

[node name="corner_table" parent="decor" index="14" instance=ExtResource("22_5kyhp")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 6.75, 2, -3.5)

[node name="stone_archway3" parent="misc" index="0" instance=ExtResource("2_pki5p")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 3, 0.5, 2)
length = 3.0

[node name="note" parent="misc" index="1" instance=ExtResource("14_bjogf")]
transform = Transform3D(-0.680746, 0, 0.732519, 0, 1, 0, -0.732519, 0, -0.680746, 12.5822, 0.801072, -2.33667)
label = ExtResource("15_3js4e")

[node name="small_archway" parent="misc" index="2" instance=ExtResource("28_gg6p8")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 8.5, 0.5, -0.5)
length = 4.0
material = ExtResource("22_1fwwt")

[node name="chest" parent="misc" index="3" instance=ExtResource("32_v6vsh")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 14.25, 0.5, -3.374)

[node name="ruboleum_vial" parent="misc/chest" index="6" instance=ExtResource("24_g1atn")]
transform = Transform3D(0.161707, 0, 0.986839, 0, 1, 0, -0.986839, 0, 0.161707, 0.377059, 0.16, 0.0659707)
item_data = SubResource("Resource_yb1eg")

[node name="ruboleum_vial2" parent="misc/chest" index="7" instance=ExtResource("24_g1atn")]
transform = Transform3D(-0.606641, 0, 0.794976, 0, 1, 0, -0.794976, 0, -0.606641, -0.335284, 0.16, 0.096612)
item_data = SubResource("Resource_2sw8t")

[node name="note2" parent="misc" index="4" instance=ExtResource("14_bjogf")]
transform = Transform3D(0.741871, 0, 0.670543, 0, 1, 0, -0.670543, 0, 0.741871, 5.33279, 2, -2.92512)
label = ExtResource("28_a1a56")

[node name="safe_room_area" type="Area3D" parent="." index="8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.5, 0, 0)
collision_mask = 2
priority = 2
reverb_bus_name = &"General (lite)"
reverb_bus_amount = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="safe_room_area" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.25, 3.5, 0)
shape = SubResource("BoxShape3D_8cenn")

[node name="occluder_instance" parent="." index="9"]
occluder = ExtResource("32_bdtjo")

[node name="music_player" type="AudioStreamPlayer" parent="." index="10"]
stream = ExtResource("29_02vm0")
volume_db = -15.0

[node name="hanging_lamp" parent="." index="11" instance=ExtResource("22_dvdth")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.25, -0.5, -1.5)
default_range = 8.0
default_energy = 0.25
lit = false
shadow_mode = 1

[node name="shelf_2" parent="." index="12" instance=ExtResource("16_83156")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.25, 0.5, -3)

[node name="shelf_3" parent="." index="13" instance=ExtResource("16_83156")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 14, 0.5, 3.75)

[node name="shelf_4" parent="." index="14" instance=ExtResource("16_83156")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 16.25, 0.5, -2.75)

[node name="shelf_5" parent="." index="15" instance=ExtResource("16_83156")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 16.25, 0.5, 1.5)

[node name="stool" parent="." index="16" instance=ExtResource("15_awa08")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.25, 0.5, -1)

[node name="books_1" parent="." index="17" instance=ExtResource("17_h0h5u")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 16.25, 0.8, 1.5)

[node name="books_5" parent="." index="18" instance=ExtResource("33_q6ph1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 2.4, -3)

[node name="books_2" parent="." index="19" instance=ExtResource("18_jwqkr")]
transform = Transform3D(-0.258819, 0, 0.965926, 0, 1, 0, -0.965926, 0, -0.258819, 13.75, 0.85, 4)

[node name="books_6" parent="." index="20" instance=ExtResource("19_0wdpu")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 16.25, 2.4, -2.25)

[node name="books_3" parent="." index="21" instance=ExtResource("16_0k3ei")]
transform = Transform3D(-1, 0, 8.9407e-08, 0, 1, 0, -8.9407e-08, 0, -1, 16.25, 4, 1.5)

[node name="OmniLight3D" type="OmniLight3D" parent="." index="22"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.25, 2.75, 2.5)
visible = false
light_energy = 2.0
light_specular = 0.0
shadow_enabled = true
omni_range = 12.0

[node name="torch_holder" parent="." index="23" instance=ExtResource("32_cfv3l")]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 8.5, 2.25, 0)
default_energy = 0.5
shadow_mode = 1

[node name="lock_door_tutorial" type="Area3D" parent="." index="24"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 1, 2)
collision_layer = 0
collision_mask = 2
script = ExtResource("33_x680n")
message = "Lock the door behind you using the latch"
duration = 5.0

[node name="collision_shape" type="CollisionShape3D" parent="lock_door_tutorial" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1.5, 0)
shape = SubResource("BoxShape3D_8cncr")

[node name="distillation_station" parent="." index="25" instance=ExtResource("33_7s2y7")]
transform = Transform3D(0.969497, 0, -0.245104, 0, 1, 0, 0.245104, 0, 0.969497, 6.79792, 2, -3.45364)

[node name="ink_pot_w_pen" parent="." index="26" instance=ExtResource("34_jabgf")]
transform = Transform3D(-0.999902, 0, 0.0139796, 0, 1, 0, -0.0139796, 0, -0.999902, 4.47109, 2, -3.3232)

[connection signal="body_entered" from="safe_room_area" to="." method="_on_safe_room_area_body_entered"]
[connection signal="body_exited" from="safe_room_area" to="." method="_on_safe_room_area_body_exited"]
[connection signal="body_entered" from="lock_door_tutorial" to="lock_door_tutorial" method="_on_body_entered"]
